@@ -91,7 +91,7 @@ build() {
 	  sed -i "s:lib64\/libjpeg.so:lib\/libjpeg.so:g" ${srcdir}/${_OO_milestone}/solenv/inc/libs.mk
 	 else EXTRAOPTS="--with-stlport	--without-system-cppunit"
 	  # 	http://hg.services.openoffice.org/cws/sb122/raw-rev/f77b0e62cc92
-#	  cp -v ${srcdir}/cppunit_gcc45.diff ${srcdir}/${_OO_milestone}/cppunit/ldflags.patch
+	  cp -v ${srcdir}/cppunit_gcc45.diff ${srcdir}/${_OO_milestone}/cppunit/ldflags.patch
 	fi
 
 	cd ${srcdir}/${_OO_milestone}
@@ -216,7 +216,8 @@ package_openoffice-base-devel() {
              'lucene:		full-text search engine library for Java needed in the help section'
              'sane:		for scanner access'
              'unixodbc:		adds ODBC database support')
- backup=(usr/lib/openoffice-dev/program/sofficerc etc/profile.d/openoffice-devel.sh)
+# backup=(usr/lib/openoffice-dev/program/sofficerc etc/profile.d/openoffice-devel.sh)
+ backup=(usr/lib/openoffice.org3-dev/program/sofficerc etc/profile.d/openoffice-devel.sh)
  provides=('openoffice-base' 'openoffice-en-US')
 
 
@@ -233,34 +234,41 @@ package_openoffice-base-devel() {
 	rmdir ${pkgdir}/opt
 
         ## Step 1 
-        cd ${pkgdir}/usr/lib/openoffice.org
-        mv ure/ basis3.4/
-        cd basis3.4
-        rm ure-link && mv ure ure-link
-        ## Step 2
-        cd ${pkgdir}/usr/lib/
-        mv openoffice.org/basis3.4/ openoffice.org3/
-        cd openoffice.org3/
-        rm basis-link && mv basis3.4 basis-link
+#        cd ${pkgdir}/usr/lib/openoffice.org
+#        mv ure/ basis3.4/
+#        cd basis3.4
+#        rm ure-link && mv ure ure-link
+#        ## Step 2
+#        cd ${pkgdir}/usr/lib/
+#        mv openoffice.org/basis3.4/ openoffice.org3/
+#        cd openoffice.org3/
+#        rm basis-link && mv basis3.4 basis-link
         ## Step 3        
-        cd ${pkgdir}/usr/lib/
-        rmdir ${pkgdir}/usr/lib/openoffice.org
-        mv openoffice.org3 openoffice
+#        cd ${pkgdir}/usr/lib/
+#        rmdir ${pkgdir}/usr/lib/openoffice.org
+#        mv openoffice.org3 openoffice
 
        # install all built dictionaries from source tree
        pushd ${srcdir}/${_OO_milestone}/dictionaries/unxlng?6.pro/bin
        for i in `ls -1 dict-??.oxt`; do
-         install -D -m644 $i ${pkgdir}/usr/lib/openoffice/share/extension/install/$i
+#         install -D -m644 $i ${pkgdir}/usr/lib/openoffice/share/extension/install/$i
+         install -D -m644 $i ${pkgdir}/usr/lib/openoffice.org3/share/extension/install/$i
        done
        popd
        
        # install extensions
        pushd ${srcdir}/${_OO_milestone}/solver/300/unxlng?6.pro/bin
-         install -D -m644 report-builder.oxt ${pkgdir}/usr/lib/openoffice/share/extension/install/report-builder.oxt
-	 install -D -m644 swext/wiki-publisher.oxt ${pkgdir}/usr/lib/openoffice/share/extension/install/wiki-publisher.oxt
-	 install -D -m644 minimizer/presentation-minimizer.oxt ${pkgdir}/usr/lib/openoffice/share/extension/install/presentation-minimizer.oxt
-	 install -D -m644 presenter/presenter-screen.oxt ${pkgdir}/usr/lib/openoffice/share/extension/install/presenter-screen.oxt
-	 install -D -m644 pdfimport/pdfimport.oxt ${pkgdir}/usr/lib/openoffice/share/extension/install/pdfimport.oxt
+#         install -D -m644 report-builder.oxt ${pkgdir}/usr/lib/openoffice/share/extension/install/report-builder.oxt
+#	 install -D -m644 swext/wiki-publisher.oxt ${pkgdir}/usr/lib/openoffice/share/extension/install/wiki-publisher.oxt
+#	 install -D -m644 minimizer/presentation-minimizer.oxt ${pkgdir}/usr/lib/openoffice/share/extension/install/presentation-minimizer.oxt
+#	 install -D -m644 presenter/presenter-screen.oxt ${pkgdir}/usr/lib/openoffice/share/extension/install/presenter-screen.oxt
+#	 install -D -m644 pdfimport/pdfimport.oxt ${pkgdir}/usr/lib/openoffice/share/extension/install/pdfimport.oxt
+         install -D -m644 report-builder.oxt ${pkgdir}/usr/lib/openoffice.org3/share/extension/install/report-builder.oxt
+	 install -D -m644 swext/wiki-publisher.oxt ${pkgdir}/usr/lib/openoffice.org3/share/extension/install/wiki-publisher.oxt
+	 install -D -m644 minimizer/presentation-minimizer.oxt ${pkgdir}/usr/lib/openoffice.org3/share/extension/install/presentation-minimizer.oxt
+	 install -D -m644 presenter/presenter-screen.oxt ${pkgdir}/usr/lib/openoffice.org3/share/extension/install/presenter-screen.oxt
+	 install -D -m644 pdfimport/pdfimport.oxt ${pkgdir}/usr/lib/openoffice.org3/share/extension/install/pdfimport.oxt
+
        popd
 
 
@@ -269,7 +277,8 @@ package_openoffice-base-devel() {
 	mkdir -p ${pkgdir}/usr/share/icons/{hicolor,locolor}
                
 	# install shortcuts
-	mv ${pkgdir}/usr/lib/openoffice/share/xdg/*.desktop  ${pkgdir}/usr/share/applications
+#	mv ${pkgdir}/usr/lib/openoffice/share/xdg/*.desktop  ${pkgdir}/usr/share/applications
+	mv ${pkgdir}/usr/lib/openoffice.org3/share/xdg/*.desktop  ${pkgdir}/usr/share/applications
 	# add startcenter desktop file
 	install -D -m644 ${srcdir}/startcenter.desktop ${pkgdir}/usr/share/applications/startcenter.desktop
 
@@ -303,16 +312,24 @@ package_openoffice-base-devel() {
 
 	## Develize it!
 	cd ${pkgdir}/usr/lib/
-	mv openoffice openoffice-dev
+#	mv openoffice openoffice-dev
+	mv openoffice.org openoffice.org-dev
+	mv openoffice.org3 openoffice.org3-dev
+	# fix link
+	ln -sf /usr/lib/openoffice.org-dev/basis3.4 ${pkgdir}/usr/lib/openoffice.org3-dev/basis-link
+	ln -s /usr/lib/openoffice.org3-dev/program/soffice.bin ${pkgdir}/usr/lib/openoffice.org3-dev/program/soffice-dev.bin
 
 	sed -i -e 's|Exec=/usr/bin/soffice|Exec=/usr/bin/soffice-dev|g' ${pkgdir}/usr/share/applications/*.desktop
 	sed -i -e 's|Exec=/usr/bin/spadmin|Exec=/usr/bin/spadmin-dev|g' ${pkgdir}/usr/share/applications/printeradmin.desktop
 
 	cd ${pkgdir}/usr/bin
 	rm -f soffice spadmin
-	ln -sf /usr/lib/openoffice-dev/program/soffice soffice-dev
-	ln -sf /usr/lib/openoffice-dev/program/spadmin spadmin-dev
-	ln -sf /usr/lib/openoffice-dev/program/unopkg unopkg-dev
+#	ln -sf /usr/lib/openoffice-dev/program/soffice soffice-dev
+#	ln -sf /usr/lib/openoffice-dev/program/spadmin spadmin-dev
+#	ln -sf /usr/lib/openoffice-dev/program/unopkg unopkg-dev
+	ln -sf /usr/lib/openoffice.org3-dev/program/soffice soffice-dev
+	ln -sf /usr/lib/openoffice.org3-dev/program/spadmin spadmin-dev
+	ln -sf /usr/lib/openoffice.org3-dev/program/unopkg unopkg-dev
 	
 	cd ${pkgdir}/usr/share/applications/
 	for desktopz in *.desktop
@@ -325,8 +342,8 @@ package_openoffice-base-devel() {
 	sed -i -e 's|Icon=|Icon=dev-|g' ${pkgdir}/usr/share/applications/*.desktop
 	sed -i -e 's|OpenOffice\.org\ 3\.4|OpenOffice\.org\ devel|g' ${pkgdir}/usr/share/applications/*.desktop
 
-	cd ${pkgdir}/usr/lib/openoffice-dev/program/
-	ln -sf /usr/lib/openoffice-dev/program/soffice.bin soffice-dev.bin
+#	cd ${pkgdir}/usr/lib/openoffice-dev/program/
+	ln -vsf /usr/lib/openoffice.org3-dev/program/soffice.bin soffice-dev.bin
 	
        # set desktop variable to force gtk/gnome vcl usage
        install -m755 -d ${pkgdir}/etc/profile.d
@@ -334,8 +351,9 @@ package_openoffice-base-devel() {
 
 	# link the mozilla-plugin
 	mkdir -p ${pkgdir}/usr/lib/mozilla/plugins/
-	cd ${pkgdir}/usr/lib/mozilla/plugins/
-	ln -v -s /usr/lib/openoffice-dev/program/libnpsoplugin.so . 
+#	cd ${pkgdir}/usr/lib/mozilla/plugins/
+#	ln -v -s /usr/lib/openoffice-dev/program/libnpsoplugin.so . 
+	ln -vs /usr/lib/openoffice.org3-dev/program/libnpsoplugin.so  ${pkgdir}/usr/lib/mozilla/plugins/libnpsoplugin.so
 	mv ${pkgdir}/usr/lib/mozilla/plugins/libnpsoplugin.so ${pkgdir}/usr/lib/mozilla/plugins/libnpsoplugin-dev.so
 }
 
@@ -377,15 +395,16 @@ package_openoffice-sdk-devel() {
 	done
 
 	cd ${pkgdir}/usr/lib/
-	mv openoffice.org openoffice
+#	mv openoffice.org openoffice
 
- 	cd ${pkgdir}/usr/lib/openoffice/
-	mv basis3.4 basis-link
+# 	cd ${pkgdir}/usr/lib/openoffice/
+#	mv basis3.4 basis-link
 
 	# fix ownership and permissions
 	chown root.root -R ${pkgdir}/
 	
 	## Develize it!
 	cd ${pkgdir}/usr/lib/
-	mv openoffice openoffice-dev
+#	mv openoffice openoffice-dev
+	mv openoffice.org openoffice.org-dev
 }
