@@ -6,7 +6,8 @@ update-desktop-database -q
 echo " * check /etc/profile.d/openoffice-devel.sh, then relogin or \"source\" the file"
 echo " * see http://wiki.archlinux.org/index.php/Openoffice"
 echo "   how to use extensions, e.g. for spell checking"
-echo "   see /usr/lib/openoffice-dev/share/extension/install what"
+#echo "   see /usr/lib/openoffice-dev/share/extension/install what"
+echo "   see /usr/lib/openoffice.org3-dev/share/extension/install what"
 echo "   is shipped with this package"
 echo " * make sure you have installed a ttf font (ttf-dejavu recommended)"
 }
@@ -21,5 +22,7 @@ gtk-update-icon-cache -f -q /usr/share/icons/hicolor
 
 # make sure everything is gone, maybe someone has installed
 # extensions for all users using unopkg --shared
-rm -rf /usr/lib/openoffice-dev
+#rm -rf /usr/lib/openoffice-dev
+rm -rf /usr/lib/openoffice.org3-dev
+rm -rf /usr/lib/openoffice.org-dev
 }
