@@ -1,4 +1,4 @@
 export OOO_FORCE_DESKTOP=gnome
 #export OOO_FORCE_DESKTOP=KDE4
 
-#export PYTHONPATH=$PYTHONPATH:/usr/lib/openoffice/basis-link/program/
+#export PYTHONPATH=$PYTHONPATH:/usr/lib/openoffice.org-dev/basis-link/program/
