@@ -3,6 +3,7 @@
         * 3.3_dev300_m85-1:
 	- new snapshot
 	- add patch to build with system libmythes
+	- drop merging the install dirs to stay upstream
 
 2010-07-17 Andreas Radke <andyrtr at archlinux.org>
 
